build/test/lib/errors/not-implemented.js
"use strict";
Object.defineProperty(exports, "__esModule", { value: true });
const incident_1 = require("incident");
exports.name = "NotImplemented";
function createNotImplementedError(message) {
    return incident_1.Incident(exports.name, message);
}
exports.createNotImplementedError = createNotImplementedError;

//# sourceMappingURL=data:application/json;charset=utf8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIi4uLy4uL3NyYy9saWIvZXJyb3JzL25vdC1pbXBsZW1lbnRlZC50cyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiOztBQUFBLHVDQUFvQztBQUd2QixRQUFBLElBQUksR0FBUyxnQkFBZ0IsQ0FBQztBQVEzQyxTQUFnQix5QkFBeUIsQ0FBQyxPQUFlO0lBQ3ZELE9BQU8sbUJBQVEsQ0FBQyxZQUFJLEVBQUUsT0FBTyxDQUFDLENBQUM7QUFDakMsQ0FBQztBQUZELDhEQUVDIiwiZmlsZSI6ImxpYi9lcnJvcnMvbm90LWltcGxlbWVudGVkLmpzIiwic291cmNlc0NvbnRlbnQiOlsiaW1wb3J0IHsgSW5jaWRlbnQgfSBmcm9tIFwiaW5jaWRlbnRcIjtcblxuZXhwb3J0IHR5cGUgTmFtZSA9IFwiTm90SW1wbGVtZW50ZWRcIjtcbmV4cG9ydCBjb25zdCBuYW1lOiBOYW1lID0gXCJOb3RJbXBsZW1lbnRlZFwiO1xuXG5leHBvcnQgaW50ZXJmYWNlIERhdGEge1xufVxuXG5leHBvcnQgdHlwZSBDYXVzZSA9IHVuZGVmaW5lZDtcbmV4cG9ydCB0eXBlIE5vdEltcGxlbWVudGVkRXJyb3IgPSBJbmNpZGVudDxEYXRhLCBOYW1lLCBDYXVzZT47XG5cbmV4cG9ydCBmdW5jdGlvbiBjcmVhdGVOb3RJbXBsZW1lbnRlZEVycm9yKG1lc3NhZ2U6IHN0cmluZyk6IE5vdEltcGxlbWVudGVkRXJyb3Ige1xuICByZXR1cm4gSW5jaWRlbnQobmFtZSwgbWVzc2FnZSk7XG59XG4iXSwic291cmNlUm9vdCI6Ii4uLy4uIn0=
